duihome (0.21.11~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#167077 - [browser-blocker] Launcher is passing the substitution variables in the Exec field of the .desktop field as parameters when there is no substitution to be done

 -- Aki Koskinen <aki.koskinen@nokia.com>  Mon, 14 Jun 2010 11:59:00 +0300

duihome (0.21.10-1) unstable; urgency=low

  * Support for absolute icon paths in .desktop entry files
  * Implemented: SWP#DUI-2666 Verify the UI flow when exiting and re-entering homescreen views
  * Implemented: SWP#DUI-3013 Optimize switcher update when new windows are created, old ones are removed or windows update
  * Fixes: NB#173173 - Launcher view switch needs too much panning. Panning paramteres have now been tuned as required by UI designers
  * Fixes: NB#168403 - Shared QObjects being deleted directly in launcher code.
  * Fixes: NB#173280 - Set wallpaper with large resolution image cause phone freeze
  * Fixes: NB#169123 - Unlocalized application name in application grid

 -- Aki Koskinen <aki.koskinen@nokia.com>  Mon, 14 Jun 2010 11:26:00 +0300

duihome (0.21.9-1) unstable; urgency=low

  * Implemented: SWP#DUI-2724 Support to open launcher at a page where launcher item with certain application icon is displayed.
  * Implemented: SWP#DUI-3019 Switcher overview mode should have no more than 4 thumbnails at one time.
  * Implemented: SWP#DUI-3205 Implement support for "-prestart" switch in duihome
  * Fixes: NB#169758 - Launcher button not updated when desktop entry file is modified
  * Fixes: NB#168077 - launcherbuttons.data keys that do not belong to [DesktopEntries] group result in broken entries in the launcher
  * Fixes: NB#168422 - System modal dialog windows are shown in the switcher
  * Fixes: NB#165454 - duihome must implement -prestart parameter

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 03 Jun 2010 16:23:00 +0300

duihome (0.21.8-1) unstable; urgency=low

  * Disabled the Applet Space 
